--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
         <h1>Weartake</h1>
         <nav>
           <ul class="header-menu">
-            <li>Todos</li>
-            <li>Acessórios</li>
-            <li>Camisetas</li>
+            <button class="nav-button">Todos</button>
+            <button class="nav-button">Acessórios</button>
+            <button class="nav-button">Camisetas</button>
           </ul>
         </nav>
       </div>
